k8s/apps/openclaw/02-allow-ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-external
  namespace: openclaw
spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: openclaw
        app.kubernetes.io/instance: openclaw
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP\n      port: 18789\n
